# limpa

./: .dockerignore  .env_example  .envrc.example  .gitignore  AGENTS.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
config/: settings.py  urls.py
db/: site.sqlite3
limpa/: admin.py  apps.py  models.py  tasks.py  views.py
limpa/management/commands/: clean_audio.py  refresh_feeds.py
limpa/migrations/: 0001_initial.py  0002_podcast_episode_count.py  0003_add_processed_episodes_and_last_refreshed_at.py  0004_status_processing_ready.py
limpa/services/: audio.py  extract.py  feed.py  http.py  modal_transcription.py  s3.py  transcribe.py  types.py
limpa/static/limpa/: style.css
limpa/templates/limpa/: _podcast_item.html  home.html
plans/: feature_1.md  feature_2.md  feature_3.md
scripts/: nemo_streaming_demo.py  test_nemo.py  test_openrouter_structured.py  test_podcast_feeds.py  transcribe_modal.py  transcribe_timestamps.py
