[project]
name = "limpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "django>=6.0",
  "gunicorn>=23.0.0",
  "modal>=1.0.0",
  "whitenoise>=6.11.0",
  "feedparser>=6.0.0",
  "boto3>=1.35.0",
  "django-tasks>=0.10.0",
]

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "django-stubs[compatible-mypy]>=5.2.8",
  "mypy>=1.19.1",
  "pyright>=1.1.407",
  "ruff>=0.14.10",
]

[tool.deptry.per_rule_ignores]
DEP001 = ["nemo", "torch", "pydub"]
DEP002 = ["gunicorn", "modal", "whitenoise", "django-tasks"]

[tool.ruff]
extend-exclude = ["scripts"]

[tool.deptry]
extend_exclude = ["scripts"]

[tool.pyright]
exclude = ["scripts", ".venv", "db"]
