[project]
name = "limpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "django>=6.0",
  "gunicorn>=23.0.0",
  "modal>=1.0.0",
  "whitenoise>=6.11.0",
  "feedparser>=6.0.0",
  "boto3>=1.35.0",
  "django-tasks>=0.10.0",
  "openai>=2.14.0",
  "pydantic>=2.12.5",
  "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "django-stubs[compatible-mypy]>=5.2.8",
  "honcho>=2.0.0",
  "mypy>=1.19.1",
  "pyright>=1.1.407",
  "ruff>=0.14.10",
]

[tool.deptry.per_rule_ignores]
DEP001 = ["nemo", "torch", "pydub"]
DEP002 = ["gunicorn", "modal", "whitenoise", "django-tasks"]

[tool.ruff]
extend-exclude = ["scripts"]

# [tool.ruff.lint]
# extend-select = [
#   "F",   # Pyflakes rules
#   "W",   # PyCodeStyle warnings
#   "E",   # PyCodeStyle errors
#   "I",   # Sort imports properly
#   "UP",  # Warn if certain things can changed due to newer Python versions
#   "C4",  # Catch incorrect use of comprehensions, dict, list, etc
#   "FA",  # Enforce from __future__ import annotations
#   "ISC", # Good use of string concatenation
#   "ICN", # Use common import conventions
#   "RET", # Good return practices
#   "SIM", # Common simplification rules
#   "TID", # Some good import practices
#   "TC",  # Enforce importing certain types in a TYPE_CHECKING block
#   "PTH", # Use pathlib instead of os.path
#   "TD",  # Be diligent with TODO comments
#   "NPY", # Some numpy-specific things
# ]


[tool.deptry]
extend_exclude = ["scripts"]

[tool.pyright]
exclude = ["scripts", ".venv", "db"]
